<resources>
    <string name="hello_world"></string>
	<string name="app_name">恋愛白書</string>
	<string name="loading">正在下載</string>
	<string name="CrashErrorReport_MailTo">收件人</string>
	<string name="CrashErrorReport_MailSubject">主題</string>
	<string name="CrashErrorReport_URL">主題</string>
	<string name="CrashErrorReport_ToastText">主題</string>
	<string name="action_share">分享</string>
	<string name="action_search">搜尋</string>
	<string name="action_settings">設定</string>
	<string name="action_refresh">刷新</string>
	<string name="action_help">幫助</string>
	<string name="hintEditUserEmail">請輸入電郵地址</string>
	<string name="hintEditPassword">請輸入密碼</string>
	<string name="validateCheckEmailFormat">請檢查電郵地址格式</string>
	<string name="validateIncorrectCredential">登入資料錯誤</string>
	<string name="exceptionCannotConnectToNetwork">網絡連線失敗！</string>
	<string name="pleaseRetryLater">請稍後再重試。</string>
	<string name="login">登入</string>
	<string name="resetPassword">重設密碼</string>
	<string name="signUpNow">立即注冊</string>
	<string name="loginInProgress">正在登入</string>
	<string name="loginSuccess">登入成功！</string>
	<string name="logout">登出</string>
	<string name="forgetPasswordElfHint">忘記密碼</string>
	<string name="forgetPasswordInProgress">密碼重設中</string>
	<string name="forgetPasswordSuccessElfHint">請檢查郵箱，輸入驗証碼，設定密碼，然後激活帳號。</string>
	<string name="resetPasswordSuccessPleaseCheckEmail">重設密碼成功，請檢查郵箱</string>
	<string name="forgetPasswordContinue">繼續</string>
	<string name="hintEditPasswordTooShort">密碼不能太短</string>
	<string name="signUp">注冊</string>
	<string name="signUpElfHint">
		<![CDATA[歡迎加入<font color="#ff00cc">恋愛白書</font>！就讓緣份牽引, 為您找出有情人! 趕快完成幾個簡單步驟, 立即開始~]]>
	</string>
	<string name="hintEditConfirmPassword">請確認密碼</string>
	<string name="iAgree">您同意我們的</string>
	<string name="pleaseAcceptOur">請接受我們的</string>
	<string name="userTerms">使用者條款</string>
	<string name="userTermsUnderlined">
		<u>使用者條款</u>
	</string>
	<string name="privacyTerms">私隱條款</string>
	<string name="privacyTermsUnderlined">
		<u>私隱條款</u>
	</string>
	<string name="signUpInProgress">注冊進行中</string>
	<string name="signUpSuccessElfHint">請檢查郵箱，輸入驗証碼，設定密碼，然後激活帳號。</string>
	<string name="signUpFailEmailExistsElfHint">注冊失敗！你的電郵已經注冊！</string>
	<string name="signin">登入</string>
	<string name="signUpEmailExists">你的電郵已經注冊</string>
	<string name="hintEditPasscode">請輸入驗証碼</string>
	<string name="hintConfirmPasswordNotMatch">輸入密碼不符</string>
	<string name="validateIncorrectPasscode">驗証碼錯誤</string>
	<string name="hintEditNewPassword">請輸入新密碼</string>
	<string name="hintEditConfirmNewPassword">請確定新密碼</string>
	<string name="passcodeSuccess">登入成功！</string>
	<string name="profileSetup">個人檔案</string>
	<string name="profileSetupBasicElfHint">請輸入以下基本資料！ 這些資料有助新朋友認識您， 也能幫助我們替您尋找匹配的對象！</string>
	<string name="hintEditUserAlias">請輸入暱稱</string>
	<string name="hintEditUserLocation">請選擇所在地</string>
	<string name="hintEditUserBirthday">請輸入你的生日日期</string>
	<string name="userBirthday">生日日期</string>
	<string name="hintEditUserOccupation">你的工作類型是什麼？</string>
	<string name="hintEditUserSchool">你曾就讀的學校的名字是什麼？</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="profileSetupContinue">繼續</string>
	<string name="uploadInProgress">正在上傳資料</string>
	<string name="dataUploadSucceed">已成功上傳資料</string>
	<string name="hintEditBirthdayAgeShouldBeAbove">必須年滿</string>
	<string name="hintEditBirthdayAge">歲</string>
	<string name="profileSetupPhotosElfHint">
		<![CDATA[第一印象非常重要！ 快上傳能展現您吸引力的照片吧！ 每張照片將會得到<font color="#ff00cc">100 魅力</font>作獎勵！]]>
	</string>
	<string name="takePhoto">拍攝照片</string>
	<string name="chooseFromGallery">選擇照片</string>
	<string name="addPhoto">加入照片</string>
	<string name="cancel">取消</string>
	<string name="choosePhoto">選擇照片</string>
	<string name="hintEditProfilePhotos">必須上載左上角第一張照片！</string>
	<string name="cannotFindCropApp">找不到照片編輯工具</string>
	<string name="chooseCropApp">選擇編輯工具</string>
	<string name="profileSetupInterestsElfHint">
		<![CDATA[<font color="#ff00cc">共同愛好</font>有助打開話匣子，也有助加深認識！ 請在下面的類別加入您的愛好成為<font color="#ff00cc">緣份標簽</font>，讓我助你尋找趣味相投的有緣人！]]>
	</string>
	<string name="hintEditProfileInterestsPart01">必須加入最少</string>
	<string name="hintEditProfileInterestsPart02">個緣份楆簽</string>
	<string name="ic_title_music">音樂</string>
	<string name="ic_hint_music">分享你的ALL TIME FAVOURITE SONG</string>
	<string name="ic_elfhint_music">每個人都有一個ALL TIME FAVOURITE 的 SONG LIST! 分享一下你喜愛的音樂，以歌會友！</string>
	<string name="ic_example_music">GANGNAM STYLE</string>
	<string name="ic_title_bteam">籃球</string>
	<string name="ic_hint_bteam">湖人、帝王、熱火, 你最愛那一隊?</string>
	<string name="ic_elfhint_bteam">籃球講求速度技術, 讓你看得血脈沸騰！你會是那一隊的忠實支持者?</string>
	<string name="ic_example_bteam">熱火</string>
	<string name="ic_title_team">足球</string>
	<string name="ic_hint_team">作為標準球迷的你擁護的球隊</string>
	<string name="ic_elfhint_team">隨處都可以感受到足球的魅力！英超、西甲、意甲, 甚至中超、日職聯, 有你喜歡的球隊嗎?</string>
	<string name="ic_example_team">曼聯</string>
	<string name="ic_title_game">電玩</string>
	<string name="ic_hint_game">那些令你玩得過癮的電玩</string>
	<string name="ic_elfhint_game">PS4, XBOX, PC上都有不少流行的遊戲，有那些令你玩得大呼過癮? 告訴我你最愛的電玩遊戲吧</string>
	<string name="ic_example_game">英雄聯盟</string>
	<string name="ic_title_travel">旅遊</string>
	<string name="ic_hint_travel">世界這麼大, 有令你樂而忘返的旅遊點嗎</string>
	<string name="ic_elfhint_travel">環遊世界是你的夢想吧，世界這麼大，有令你樂而忘返的旅遊點嗎? </string>
	<string name="ic_example_travel">明洞</string>
	<string name="ic_title_dog">愛犬之人</string>
	<string name="ic_hint_dog">最想擁有的狗狗品種</string>
	<string name="ic_elfhint_dog">狗狗是人類最好的朋友，告訴我那一個品種是你最喜愛的?</string>
	<string name="ic_example_dog">金毛尋回犬</string>
	<string name="ic_title_cat">愛貓之人</string>
	<string name="ic_hint_cat">什麼品種的貓咪最得你的歡心?</string>
	<string name="ic_elfhint_cat">貓咪的孤獨高傲的性格有著獨特的吸引力，什麼品種最得你的歡心?</string>
	<string name="ic_example_cat">波絲貓</string>
	<string name="ic_title_idol">明星偶像</string>
	<string name="ic_hint_idol">你是誰的忠實粉絲</string>
	<string name="ic_elfhint_idol">無數充滿魅力的明星偶像讓你尖叫歡呼，你是那幾位的忠實粉絲?</string>
	<string name="ic_example_idol">陳奕迅</string>
	<string name="ic_title_movie">電影</string>
	<string name="ic_hint_movie">你心目中有那些的經典電影</string>
	<string name="ic_elfhint_movie">電影是熱門消閒娛樂, 有那些經典作品,  至今亦令你津津樂道?</string>
	<string name="ic_example_movie">變型金剛</string>
	<string name="ic_title_tv">電視劇集</string>
	<string name="ic_hint_tv">中西日韓的劇集,你追看過那幾部?</string>
	<string name="ic_elfhint_tv">中西日韓的電視劇集, 各有特色風格, 各有令人迷上的理由, 你又追看過那幾部?</string>
	<string name="ic_example_tv">來自星星的你</string>
	<string name="ic_title_sport">運動</string>
	<string name="ic_hint_sport">助你鍛鍊強健體魄的活動</string>
	<string name="ic_elfhint_sport">運動不但強身健體, 亦是生活態度, 你是那些運動的爱好者?</string>
	<string name="ic_example_sport">跑步</string>
	<string name="ic_title_bar">CLUBBING</string>
	<string name="ic_hint_bar">喜愛夜蒲的你最常到的夜店</string>
	<string name="ic_elfhint_bar">嚮往夜生活, 沉醉在美酒和充滿音樂的氣氛中, 也是一種享受, 那些是你常到的夜店?</string>
	<string name="ic_example_bar">MUSE</string>
	<string name="ic_title_restaurant">餐廳</string>
	<string name="ic_hint_restaurant">你經常光顧, 或一試難忘的餐廳</string>
	<string name="ic_elfhint_restaurant">由高級餐廳到街頭食檔, 地道口味到各地美食, 分享你經常光顧或一試難忘的餐廳吧</string>
	<string name="ic_example_restaurant">JAMIE\'S ITALIAN</string>
	<string name="ic_title_instrument">樂器</string>
	<string name="ic_hint_instrument">隨手就可彈奏一曲的樂器</string>
	<string name="ic_elfhint_instrument">音樂不但是藝術, 也反映你的生活品味, 告訴我你有那些擅長的樂器吧</string>
	<string name="ic_example_instrument">結他</string>
	<string name="ic_title_goal">目標</string>
	<string name="ic_hint_goal">你心裡最希望達成的事</string>
	<string name="ic_elfhint_goal">沒有夢想, 跟鹹魚一樣, 一人總有一個人生目標吧, 分享你心裡最希望達成的事</string>
	<string name="ic_example_goal">減肥</string>
	<string name="ic_title_book">流行讀物</string>
	<string name="ic_hint_book">有那些令你廢寢忘餐追看的作品</string>
	<string name="ic_elfhint_book">愛情、懸疑、推理, 各式各樣的流行讀物, 有那些是你廢寢忘餐追看的作品?</string>
	<string name="ic_example_book">哈利波特</string>
	<string name="ic_title_app">Apps</string>
	<string name="ic_hint_app">你手機裡必備的應用</string>
	<string name="ic_elfhint_app">手機APPS 林林總總, 工具社交通訊音樂不可或缺, 那些是你必備的應用?</string>
	<string name="ic_example_app">淘寶</string>
	<string name="ic_title_cartoon">動漫</string>
	<string name="ic_hint_cartoon">One Piece, Dragon Ball, 聖鬥士星矢, 會是你最愛的動漫嗎?</string>
	<string name="ic_elfhint_cartoon">看動漫不只是最佳的消閒活動, 更有陪伴我們成長記憶, 分享一下你最愛的動漫吧</string>
	<string name="ic_example_cartoon">海賊王</string>
	<string name="ic_title_brand">潮流品牌</string>
	<string name="ic_hint_brand">走在時代尖端的你最愛的潮流品牌</string>
	<string name="ic_elfhint_brand">滿身都是潮流品牌的你, 散發出與別不同的個性, 告訴我那些是你情有獨鍾的品牌?</string>
	<string name="ic_example_brand">NIKE</string>
	<string name="addYourFavorite">加入你的愛好於</string>
	<string name="hitFavorite">熱門：</string>
	<string name="noOtherUsersLike">未有用戶喜歡</string>
	<string name="doYouStillWantToAddThisAsYourFavorite">要加入這愛好成為新的緣份標簽嗎？</string>
	<string name="forExample">例如：</string>
	<string name="profile">個人檔案</string>
	<string name="loveView">愛情觀</string>
	<string name="userAlias">暱稱</string>
	<string name="userGender">性別</string>
	<string name="userAge">年齡</string>
	<string name="userOccupation">職業</string>
	<string name="userHoroscope">星座</string>
	<string name="userLocation">所在地</string>
	<string name="interest">愛好</string>
	<string name="contact">聯絡</string>
	<string name="endorsement">評價</string>
	<string name="charisma">魅力</string>
	<string name="stamina">行動力</string>
	<string name="friend">朋友</string>
	<string name="confidate">知己</string>
	<string name="lover">戀人</string>
	<string name="conversation">聊天室</string>
	<string name="people">人物</string>
	<string name="hintSpinnerCountry">請輸入所在國家</string>
	<string name="hintSpinnerRegion">請輸入所在地區</string>
	<string name="hintSpinnerOccupation">你的工作類型是什麼？</string>
	<string name="stdCountriesLoadingInProgress">正在更新資料</string>
	<string name="stdCountriesLoadingRetry">網絡連線失敗！正在重試資料</string>
	<string name="stdRegionsLoadingInProgress">正在更新地區資料</string>
	<string name="stdRegionsLoadingRetry">網絡連線失敗！正在重試更新地區資料</string>
	<string name="stdOccupationsLoadingInProgress">正在更新工作類型資料</string>
	<string name="stdOccupationsLoadingRetry">網絡連線失敗！正在重試更新工作類型資料</string>
	<string name="country_name_hk">香港</string>
	<string name="occupation_name_141">Hotel and restaurant managers</string>
	<string name="occupation_name_222">Nursing and midwifery professionals</string>
	<string name="occupation_name_252">Database and network professionals</string>
	<string name="occupation_name_322">Nursing and midwifery associate professionals</string>
	<string name="occupation_name_342">








Sports and fitness workers																		<string name="occupation_name_513">Waiters and bartenders</string>
	<string name="occupation_name_622">








Fishery workers, hunters and trappers																		<string name="stdInterestCategoryLoadingInProgress">正在更新緣份標簽</string>
	<string name="action_done">完成</string>
	<string name="hintEditInterestTitle">請輸入你的愛好</string>
	<string name="insertInterestInProgress">正在加入緣份標簽</string>
	<string name="profilesetup_capricorn">山羊座</string>
	<string name="profilesetup_aquarius">水瓶座</string>
	<string name="profilesetup_pisces">雙魚座</string>
	<string name="profilesetup_aries">白羊座</string>
	<string name="profilesetup_taurus">金牛座</string>
	<string name="profilesetup_gemini">雙子座</string>
	<string name="profilesetup_cancer">巨蟹座</string>
	<string name="profilesetup_leo">獅子座</string>
	<string name="profilesetup_virgo">處女座</string>
	<string name="profilesetup_libra">天秤座</string>
	<string name="profilesetup_scorpio">天蠍座</string>
	<string name="profilesetup_sagit">人馬座</string>
	<string name="sampleUserAlias">~~~</string>
	<string name="sampleUserAge">--</string>
	<string name="sampleUserHoroscope">---</string>
	<string name="editContactItemsElfHint1">輸入個人的社交連繫方法，透過互相送贈四葉草表達互有好感的心意, 即可獲得對方的連繫資料, 直接聯絡！</string>
	<string name="saveData">保存</string>
	<string name="ddd">连系</string>
	<string name="ddd1">个人档案</string>
	<string name="ddd2">邀請碼</string>
	<string name="ddd5">她的请求</string>
	<string name="ddd6">我的请求</string>
	<string name="ddd7">朋友列表</string>
		<string name="ddd11">修改</string>
</resources>